# rust-actixweb-tera-skeleton

./: Cargo.toml
src/: main.rs  routes.rs  states.rs
src/controllers/: example.rs
src/controllers/example/: 40x_controller.rs  default_controller.rs  html_controller.rs  index_controller.rs  json_controller.rs  session_controller.rs  static_controller.rs
src/resources/templates/example/: index.html.tera
src/resources/templates/example/40x/: 404.html.tera
src/routes/: web.rs
src/states/: app.rs  example.rs
src/tests/: integration_test.rs
