#headresscmsのrはRustのr

#cargo install cargo-watch
#cargo watch -x "run --bin headresscms"

[package]
name = "headresscms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
actix-web = "3.3.2"
#actix-webのテストに必要っぽい
actix-rt = "2.2.0"
derive_more = "0.99.16"
thiserror = "1.0.25"
#askama = "0.10.5"
tera = "1.12.1"
rusqlite = { version = "0.25.3", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
#diesel = { version = "<version>", features = ["<postgres|mysql|sqlite>"] }
diesel = { version = "1.4.7", features = ["sqlite"] }
toml = "0.5"

#cargo install diesel_cli --no-default-features --features sqlite
#