#headresscmsのrはRustのr

#cargo install cargo-watch
#cargo watch -x "run --bin actixweb-tera-skeleton"

#windows
#$Env:MYSQLCLIENT_LIB_DIR="C:\Users\yamamoto\scoop\apps\mysql\current\lib"
#cargo install diesel_cli --no-default-features --features mysql


#attribute使ってるとユニットテストする為の関数の実体が分かり辛いので
#cargo install cargo-expand
#cargo expand


[package]
name = "actixweb-tera-skeleton"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
actix-web = "3.3.2"
#actix-rtはactix-webのテストに必要っぽい
actix-rt = "2.2.0"
#静的ファイルの為
actix-files = "0.5.0"
#ロガー
env_logger = "0.9.0"
#セッション管理用
actix-session = "0.4.1"
derive_more = "0.99.16"
thiserror = "1.0.25"
#askama = "0.10.5"
tera = "1.12.1"
rusqlite = { version = "0.25.3", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
#diesel = { version = "<version>", features = ["<postgres|mysql|sqlite>"] }
diesel = { version = "1.4.7", features = ["sqlite"] }
toml = "0.5"

#cargo install diesel_cli --no-default-features --features sqlite
#